[gd_scene load_steps=2 format=3 uid="uid://de048333yjn8y"]

[ext_resource type="Script" path="res://GalleryMaintCard.gd" id="1_e186e"]

[node name="GalleryMaintainanceCard" type="PanelContainer"]
mouse_filter = 1
script = ExtResource("1_e186e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30

[node name="GalleryNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 7
text = "Gallery Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Restrict" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
text = "RESTRICT
"

[node name="Unrestrict" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 7
text = "UNRESTRICT
"

[node name="Edit Artworks" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
text = "EDIT ARTWORKS
"

[connection signal="pressed" from="VBoxContainer/Restrict" to="." method="_on_restrict_pressed"]
[connection signal="pressed" from="VBoxContainer/Unrestrict" to="." method="_on_unrestrict_pressed"]
